<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sjn_tech.alergiku.AboutUs"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_tim"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="138dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jabatan1"
        android:textSize="24sp"
        android:textColor="@color/hitam"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota1"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jabatan2"
        android:textSize="24sp"
        android:textColor="@color/hitam"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota2"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anggota3"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

</LinearLayout>
